# nrf-mesh-freeRTOS-example

./: README.md
examples/: CMakeLists.txt
examples/light_switch_freertos/: CMakeLists.txt
examples/light_switch_freertos/patch/: patch_ses_project.py
examples/light_switch_freertos/server/: CMakeLists.txt  README.md
examples/light_switch_freertos/server/include/: FreeRTOSConfig.h  app_config.h  nrf_mesh_config_app.h
examples/light_switch_freertos/server/src/: main.c
examples/light_switch_freertos/server/src/mesh_freertos/: mesh_mem_freertos.c
examples/light_switch_freertos/server/src/mesh_freertos/sdk_modified/: app_timer.h  nrf_nvic.h  nrf_sdh_freertos.c
mesh/core/include/: bearer_event.h
mesh/core/src/: bearer_event.c
